# 3d-model-Acquisition

./: README.md  requirements.txt
Data/: Reconstruction.stl
TPS-PI09-repository/acquisition_package/: package.xml  setup.cfg  setup.py
TPS-PI09-repository/acquisition_package/acquisition_package/: Acquisition.py
TPS-PI09-repository/interface_acquisition/: package.xml
TPS-PI09-repository/interface_acquisition/msg/: Num.msg
TPS-PI09-repository/interface_acquisition/srv/: CreationFichierPly.srv
TPS-PI09-repository/interface_reconstruction/: CMakeLists.txt
TPS-PI09-repository/interface_reconstruction/srv/: Reconstruction.srv
TPS-PI09-repository/interface_roboticam3d/: package.xml
TPS-PI09-repository/py_acquisition/: package.xml  setup.cfg  setup.py
TPS-PI09-repository/py_acquisition/py_acquisition/: service_acquisition.py
TPS-PI09-repository/py_reconstruction/: package.xml  setup.py
TPS-PI09-repository/py_reconstruction/py_reconstruction/: client_reconstruction.py
TPS-PI09-repository/py_roboticam3d/: setup.cfg
TPS-PI09-repository/reconstruction_package/: package.xml  setup.cfg  setup.py
calibrage/: rs-imu-calibration.py
comparaison_py/: Comparaison.py
interface_acquisition/: CMakeLists.txt
interface_reconstruction/: package.xml
interface_roboticam3d/: CMakeLists.txt
py_acquisition/py_acquisition/: client_acquisition.py
py_reconstruction/: setup.cfg
py_reconstruction/py_reconstruction/: service_reconstruction.py
py_roboticam3d/: package.xml  setup.py
py_roboticam3d/py_roboticam3d/: client_member_function.py
reconstruction_package/reconstruction_package/: Reconstruction.py
test_integration/cubes/: cube 1.stl  cube 3.stl  cube 4.stl  cube 7.stl
(+9 files in other folders)
