<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_roboticam3d</name>
  <version>0.0.0</version>
  <description>Acquisition et reconstruction</description>
  <maintainer email="clemence.dovillers@gmail.com">clem</maintainer>
  <license>Apapche License 2.0</license>

  <depend>rclpy</depend>
  <depend>interface_roboticam3d</depend>

  <exec_depend>acquisition_package</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
